<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ndt_matcher</name>
  <version>0.0.0</version>
  <description>Package description</description>
  <maintainer email="yufan.duan@ubtrobot.com">yufan.duan</maintainer>
  <license>Apache-2.0</license>
  <depend>std_msgs</depend>
  <depend>ndt_omp</depend>
  <build_depend>rclcpp</build_depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>ndt_msgs</depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>